--- a/git_gui/.classpath
+++ b/git_gui/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="libs/org.eclipse.jgit-5.2.1.201812262042-r-sources.jar"/>
+	<classpathentry kind="lib" path="libs/org.eclipse.jgit-5.2.1.201812262042-r.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
